unpackaged/main/default/objects/MXPlusTransactionActivity__c/MXPlusTransactionActivity__c.object-meta.xml
<CustomObject>
    <description>Represents an individual MX+ Transaction Activity</description>
    <label>MX+ Transaction Activity</label>
    <nameField>
        <displayFormat>MX+-Act-{0000}</displayFormat>
        <label>MX+ Transaction Activity Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MX+ Transaction Activities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>