unpackaged/main/default/objects/MXPlusTransactionActivity__c/fields/DataServicesOwner__c.field-meta.xml
<CustomField>
    <fullName>DataServicesOwner__c</fullName>
    <description>Name of the Data Services person who has taken ownership of the ticket.</description>
    <label>Data Services Owner</label>
    <length>255</length>
    <type>Text</type>
</CustomField>