unpackaged/main/default/objects/MXPlusTransactionActivity__c/fields/enerjyhubSyncedRecordID__c.field-meta.xml
<CustomField>
    <fullName>enerjyhubSyncedRecordID__c</fullName>
    <description>enerjyhubSyncedRecordID</description>
    <externalId>true</externalId>
    <inlineHelpText>enerjyhubSyncedRecordID</inlineHelpText>
    <label>enerjyhubSyncedRecordID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>