unpackaged/main/default/objects/MXPlusTransactionActivity__c/fields/OEMFileSizeAuto__c.field-meta.xml
<CustomField>
    <fullName>OEMFileSizeAuto__c</fullName>
    <formula>IF(OEMTotalDataSize__c &gt;1000000000000, TEXT(ROUND((OEMTotalDataSize__c/ 1000/ 1000/ 1000/ 1000),2))&amp;' TB',
IF(OEMTotalDataSize__c &gt;1000000000, TEXT(ROUND((OEMTotalDataSize__c/ 1000/ 1000/ 1000),2))&amp;' GB',
IF(OEMTotalDataSize__c &gt;1000000, TEXT(ROUND((OEMTotalDataSize__c/ 1000/ 1000),2))&amp;' MB',
IF(OEMTotalDataSize__c &gt;0, '0'&amp;TEXT(ROUND((OEMTotalDataSize__c/ 1000/ 1000),2))&amp;' MB',""
)
)
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OEM File Size</label>
    <type>Text</type>
</CustomField>