unpackaged/main/default/objects/MXPlusTransactionActivity__c/fields/OEMTotalDataSize__c.field-meta.xml
<CustomField>
    <fullName>OEMTotalDataSize__c</fullName>
    <description>OEM Total Data Size</description>
    <label>OEM Total Data Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>