unpackaged/main/default/objects/MXPlusTransactionActivity__c/fields/OEMTotalFiles__c.field-meta.xml
<CustomField>
    <fullName>OEMTotalFiles__c</fullName>
    <description>OEM Total Files</description>
    <label>OEM Total Files</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>