unpackaged/main/default/objects/MXPlusTransactionActivity__c/fields/ServiceDataDirection__c.field-meta.xml
<CustomField>
    <fullName>ServiceDataDirection__c</fullName>
    <description>MX+ Transaction Service Data Direction</description>
    <inlineHelpText>Transaction Service Data Direction</inlineHelpText>
    <label>Service Data Direction</label>
    <length>255</length>
    <type>Text</type>
</CustomField>