unpackaged/main/default/objects/MXPlusTransactionActivity__c/fields/ServiceProviderFileSizeAuto__c.field-meta.xml
<CustomField>
    <fullName>ServiceProviderFileSizeAuto__c</fullName>
    <formula>IF(ServiceProviderTotalDataSize__c &gt;1000000000000, TEXT(ROUND((ServiceProviderTotalDataSize__c/ 1000/ 1000/ 1000/ 1000),2))&amp;' TB',  
				IF(ServiceProviderTotalDataSize__c &gt;1000000000, TEXT(ROUND((ServiceProviderTotalDataSize__c/ 1000/ 1000/ 1000),2))&amp;' GB', 
							IF(ServiceProviderTotalDataSize__c &gt;1000000, TEXT(ROUND((ServiceProviderTotalDataSize__c/ 1000/ 1000),2))&amp;' MB',
										IF(ServiceProviderTotalDataSize__c &gt;0, '0'&amp;TEXT(ROUND((ServiceProviderTotalDataSize__c/ 1000/ 1000),2))&amp;' MB',""
												)
									) 
						) 
		)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service Provider File Size</label>
    <type>Text</type>
</CustomField>