unpackaged/main/default/objects/MXPlusTransactionActivity__c/fields/ServiceProviderTotalDataSize__c.field-meta.xml
<CustomField>
    <fullName>ServiceProviderTotalDataSize__c</fullName>
    <description>Service Provider Total Data Size</description>
    <label>Service Provider Total Data Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>