unpackaged/main/default/objects/MXPlusTransactionActivity__c/fields/ServiceProviderTotalFiles__c.field-meta.xml
<CustomField>
    <fullName>ServiceProviderTotalFiles__c</fullName>
    <description>Service Provider Total Files</description>
    <label>Service Provider Total Files</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>