unpackaged/main/default/objects/MXPlusTransactionActivity__c/fields/SupplierFileSizeAuto__c.field-meta.xml
<CustomField>
    <fullName>SupplierFileSizeAuto__c</fullName>
    <formula>IF(SupplierTotalDataSize__c &gt;1000000000000, TEXT(ROUND((SupplierTotalDataSize__c/ 1000/ 1000/ 1000/ 1000),2))&amp;' TB',  
				IF(SupplierTotalDataSize__c &gt;1000000000, TEXT(ROUND((SupplierTotalDataSize__c/ 1000/ 1000/ 1000),2))&amp;' GB', 
							IF(SupplierTotalDataSize__c &gt;1000000, TEXT(ROUND((SupplierTotalDataSize__c/ 1000/ 1000),2))&amp;' MB',
										IF(SupplierTotalDataSize__c &gt;0, '0'&amp;TEXT(ROUND((SupplierTotalDataSize__c/ 1000/ 1000),2))&amp;' MB',""
												)
									) 
						) 
		)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Supplier File Size</label>
    <type>Text</type>
</CustomField>