unpackaged/main/default/objects/MXPlusTransactionActivity__c/fields/SupplierTotalDataSize__c.field-meta.xml
<CustomField>
    <fullName>SupplierTotalDataSize__c</fullName>
    <description>Supplier Total Data Size</description>
    <label>Supplier Total Data Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>