unpackaged/main/default/objects/MXPlusTransactionActivity__c/fields/SupplierTotalFiles__c.field-meta.xml
<CustomField>
    <fullName>SupplierTotalFiles__c</fullName>
    <description>Supplier Total Files</description>
    <label>Supplier Total Files</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>