unpackaged/main/default/objects/MXPlusTransactionActivity__c/fields/TotalComments__c.field-meta.xml
<CustomField>
    <fullName>TotalComments__c</fullName>
    <description>Total Number of Comments</description>
    <label>Total Comments</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>