unpackaged/main/default/objects/MXPlusTransactionActivity__c/fields/TransactionClosedDate__c.field-meta.xml
<CustomField>
    <fullName>TransactionClosedDate__c</fullName>
    <description>Transaction Closed Date</description>
    <label>Transaction Closed Date</label>
    <type>Date</type>
</CustomField>