unpackaged/main/default/objects/MXPlusTransactionActivity__c/fields/TransactionClosedTime__c.field-meta.xml
<CustomField>
    <fullName>TransactionClosedTime__c</fullName>
    <description>Transaction Closed Time</description>
    <label>Transaction Closed Time</label>
    <type>Time</type>
</CustomField>