unpackaged/main/default/objects/MXPlusTransactionActivity__c/fields/TransactionCOO__c.field-meta.xml
<CustomField>
    <fullName>TransactionCOO__c</fullName>
    <description>MX+ Transaction COO</description>
    <inlineHelpText>Transaction COO</inlineHelpText>
    <label>Transaction COO</label>
    <length>12</length>
    <type>Text</type>
</CustomField>