unpackaged/main/default/objects/MXPlusTransactionActivity__c/fields/TransactionDate__c.field-meta.xml
<CustomField>
    <fullName>TransactionDate__c</fullName>
    <description>Transaction Date</description>
    <label>Transaction Date</label>
    <type>Date</type>
</CustomField>