unpackaged/main/default/objects/MXPlusTransactionActivity__c/fields/TransactionHours__c.field-meta.xml
<CustomField>
    <fullName>TransactionHours__c</fullName>
    <description>Transaction Hours</description>
    <label>Transaction Hours</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>