unpackaged/main/default/objects/MXPlusTransactionActivity__c/fields/TransactionID__c.field-meta.xml
<CustomField>
    <fullName>TransactionID__c</fullName>
    <description>Transaction ID</description>
    <externalId>true</externalId>
    <label>Transaction ID</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>