unpackaged/main/default/objects/MXPlusTransactionActivity__c/fields/TransactionOEMPick__c.field-meta.xml
<CustomField>
    <fullName>TransactionOEMPick__c</fullName>
    <label>Transaction OEM</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>MX_OEM</valueSetName>
    </valueSet>
</CustomField>