unpackaged/main/default/objects/MXPlusTransactionActivity__c/fields/TransactionService__c.field-meta.xml
<CustomField>
    <fullName>TransactionService__c</fullName>
    <description>Transaction Service</description>
    <label>Transaction Service</label>
    <length>255</length>
    <type>Text</type>
</CustomField>