unpackaged/main/default/objects/MXPlusTransactionActivity__c/fields/TransactionServiceCategory__c.field-meta.xml
<CustomField>
    <fullName>TransactionServiceCategory__c</fullName>
    <description>Transaction Service Category</description>
    <label>Transaction Service Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>