unpackaged/main/default/objects/MXPlusTransactionActivity__c/fields/TransactionStatusPick__c.field-meta.xml
<CustomField>
    <fullName>TransactionStatusPick__c</fullName>
    <description>The Status of this transaction</description>
    <label>Transaction Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Errored</fullName>
            </value>
            <value>
                <fullName>NOT_READY</fullName>
            </value>
            <value>
                <fullName>Preparing</fullName>
            </value>
            <value>
                <fullName>Ready</fullName>
            </value>
            <value>
                <fullName>Revoked</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>