unpackaged/main/default/objects/MXPlusTransactionActivity__c/fields/TransactionSupplier__c.field-meta.xml
<CustomField>
    <fullName>TransactionSupplier__c</fullName>
    <description>MX+ Transaction Supplier</description>
    <inlineHelpText>Transaction Supplier</inlineHelpText>
    <label>Transaction Supplier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>