unpackaged/main/default/objects/MXPlusTransactionActivity__c/fields/TransactionTime__c.field-meta.xml
<CustomField>
    <fullName>TransactionTime__c</fullName>
    <description>Transaction Time</description>
    <label>Transaction Time</label>
    <type>Time</type>
</CustomField>