unpackaged/main/default/objects/MXPlusTransactionActivity__c/fields/TransactionUserGroup__c.field-meta.xml
<CustomField>
    <fullName>TransactionUserGroup__c</fullName>
    <description>MX + Transaction User Group</description>
    <inlineHelpText>Transaction User Group</inlineHelpText>
    <label>Transaction User Group</label>
    <length>255</length>
    <type>Text</type>
</CustomField>