unpackaged/main/default/objects/MXPlusTransactionActivity__c/fields/UserFullName__c.field-meta.xml
<CustomField>
    <fullName>UserFullName__c</fullName>
    <description>User Full Name</description>
    <label>User Full Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>