unpackaged/main/default/objects/MXPlusTransactionActivity__c/fields/UserID__c.field-meta.xml
<CustomField>
    <fullName>UserID__c</fullName>
    <description>MX User ID</description>
    <label>UserID</label>
    <length>12</length>
    <type>Text</type>
</CustomField>