unpackaged/main/default/objects/MXPlusTransactionActivity__c/fields/UserName__c.field-meta.xml
<CustomField>
    <fullName>UserName__c</fullName>
    <description>MX Username</description>
    <label>Username</label>
    <length>255</length>
    <type>Text</type>
</CustomField>