unpackaged/main/default/objects/MXPlusTransactionActivity__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>TransactionOEMPick__c</columns>
    <columns>TransactionService__c</columns>
    <columns>TransactionStatusPick__c</columns>
    <columns>TransactionSupplier__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>